Add basic end to end test

--- a/projects/04-first-coding-interview/package.json
+++ b/projects/04-first-coding-interview/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@playwright/test": "^1.31.2",
     "vite": "^4.1.0"
   },
   "dependencies": {
